{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 48,
  "lineage": "0eb3ed60-b782-b47c-1491-32200a3f512e",
  "resources": [
    {
      "module": "module.centos_nic",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/07aed701-89b6-4cb9-80b0-709afe2f7451/resourceGroups/testrg/providers/Microsoft.Network/networkInterfaces/centos-nic",
            "internal_domain_name_suffix": "nmiba5lsj22ujkvlxnbrsuhxjc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/07aed701-89b6-4cb9-80b0-709afe2f7451/resourceGroups/testrg/providers/Microsoft.Network/publicIPAddresses/centos-public-ip",
                "subnet_id": "/subscriptions/07aed701-89b6-4cb9-80b0-709afe2f7451/resourceGroups/testrg/providers/Microsoft.Network/virtualNetworks/testvnet/subnets/testsubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-4E-14-0F",
            "name": "centos-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "testrg",
            "virtual_machine_id": "/subscriptions/07aed701-89b6-4cb9-80b0-709afe2f7451/resourceGroups/testrg/providers/Microsoft.Compute/virtualMachines/c8"
          },
          "dependencies": [
            "module.centos_public_ip.azurerm_public_ip.public_ip",
            "module.resource_group.azurerm_resource_group.testrg",
            "module.subnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.centos_public_ip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/07aed701-89b6-4cb9-80b0-709afe2f7451/resourceGroups/testrg/providers/Microsoft.Network/publicIPAddresses/centos-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.171.218.58",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "centos-public-ip",
            "resource_group_name": "testrg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.testrg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/07aed701-89b6-4cb9-80b0-709afe2f7451/resourceGroups/testrg/providers/Microsoft.Network/networkSecurityGroups/test123",
            "location": "eastus",
            "name": "test123",
            "resource_group_name": "testrg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgrule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.testrg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nsg_rule",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/07aed701-89b6-4cb9-80b0-709afe2f7451/resourceGroups/testrg/providers/Microsoft.Network/networkSecurityGroups/test123/securityRules/nsgrule",
            "name": "nsgrule",
            "network_security_group_name": "test123",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "testrg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg.azurerm_network_security_group.nsg",
            "module.resource_group.azurerm_resource_group.testrg"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/07aed701-89b6-4cb9-80b0-709afe2f7451/resourceGroups/testrg/providers/Microsoft.Network/virtualNetworks/testvnet/subnets/testsubnet",
            "name": "testsubnet",
            "resource_group_name": "testrg",
            "virtual_network_name": "testvnet"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.testrg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.ubuntu_nic",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/07aed701-89b6-4cb9-80b0-709afe2f7451/resourceGroups/testrg/providers/Microsoft.Network/networkInterfaces/ubuntu-nic",
            "internal_domain_name_suffix": "nmiba5lsj22ujkvlxnbrsuhxjc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/07aed701-89b6-4cb9-80b0-709afe2f7451/resourceGroups/testrg/providers/Microsoft.Network/publicIPAddresses/ubuntu-public-ip",
                "subnet_id": "/subscriptions/07aed701-89b6-4cb9-80b0-709afe2f7451/resourceGroups/testrg/providers/Microsoft.Network/virtualNetworks/testvnet/subnets/testsubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-2B-49-28",
            "name": "ubuntu-nic",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "testrg",
            "virtual_machine_id": "/subscriptions/07aed701-89b6-4cb9-80b0-709afe2f7451/resourceGroups/testrg/providers/Microsoft.Compute/virtualMachines/ubuntuvm"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.testrg",
            "module.subnet.azurerm_subnet.subnet",
            "module.ubuntu_public_ip.azurerm_public_ip.public_ip",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.ubuntu_public_ip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/07aed701-89b6-4cb9-80b0-709afe2f7451/resourceGroups/testrg/providers/Microsoft.Network/publicIPAddresses/ubuntu-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.171.218.238",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "ubuntu-public-ip",
            "resource_group_name": "testrg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.testrg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7d10106b-4f72-4439-aaab-bb431950f74a",
            "id": "/subscriptions/07aed701-89b6-4cb9-80b0-709afe2f7451/resourceGroups/testrg/providers/Microsoft.Network/virtualNetworks/testvnet",
            "location": "eastus",
            "name": "testvnet",
            "resource_group_name": "testrg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/07aed701-89b6-4cb9-80b0-709afe2f7451/resourceGroups/testrg/providers/Microsoft.Network/virtualNetworks/testvnet/subnets/testsubnet",
                "name": "testsubnet"
              }
            ]
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.testrg"
          ]
        }
      ]
    }
  ]
}